--- a/style.css
+++ b/style.css
@@ -1,34 +1,58 @@
-#title{
-  font-family:verdana;
-  color:black;
-  font-size:30px;
-  text-align:center;
+body {
+  box-sizing: border-box;
+  background-color: black;
 }
-p{
-  font-family:sans-serif;
-  padding-left:10px;
-  padding-right:10px;
-  font-size:14px;
+
+#title {
+  color: white;
+  font-family: verdana;
+  font-size: 2rem;
+  text-align: center;
 }
-#img-caption{
-  font-family:monospace;
-  text-align:center;
-  font-weight:1000;
+
+p {
+  color: white;
+  font-family: sans-serif;
+  margin: 1rem; 
+  font-size: 1rem;
 }
-#image{
-  border: 4px orange solid;
-  display:block;
-  width:20%;
-  margin:auto;
+
+#img-caption {
+  margin-top: 2rem;
+  font-family: monospace;
+  text-align: center;
+  font-weight: bolder;
 }
-a{
-  text-decoration:none;
-  color:orange;
-  font-weight:bold;
+
+#image {
+  border: 0px solid;
+  border-radius: 10px;
+  filter: grayscale(100%);
+  display: block;
+  width:15%;
+  min-width:150px;
+  margin: 0 auto;
+  transition: ease-out 0.3s;
 }
-a:hover{
-  color:green;
+
+#image:hover {
+  filter: grayscale(0);
+  border: 5px cornflowerblue solid;
+  transform: scale(1.1);
 }
-#footer{
-  text-align:center;
+
+a {
+  text-decoration: none;
+  color: gray;
+  font-weight: bolder;
+  transition: ease-out 0.3s;
+}
+
+a:hover {
+  color: cornflowerblue;
+  text-decoration: none;
+}
+
+#footer {
+  text-align: center;
 }
